# SSDD-LAB-CLIENT

./: .gitignore  README.md  dockerfile  run_client  run_icestorm  run_service  setup.cfg
.github/workflows/: ci.yml  pylint.yml  pytest-cov.yml
IceFlix_Template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configs/: authenticator.config  catalog.config  client.config  fileservice.config  main.config
github/workflows/: pylint.yml
iceflix/: FileService.py  FileUploader.py  __init__.py  authenticator.py  catalog.py  cli.py  client.py  commands.py  connection.py  event_listener.py  file_service.py  file_uploader.py  iceflix.ice  main.py  parsers.py  test_commands.py
iceflix/test_objects/: __init__.py
iceflix/timedAction/: __init__.py
icestormtests/: Client.py  server.py
icestormtests/configs/: main.config
services/: authenticator.py  catalog.py  file_service.py  main.py
tests/: .coveragerc  __init__.py  test_commands.py  test_file.txt
