[metadata]
name = IceFlix Template
version = 1.0.0
description = Template package to use in the IceFlix laboratory

[options]
packages = find:
install_requires =
    zeroc-ice>=3.7.0
    cmd2>=2.4.2

[options.package_data]
* = *.ice

[options.entry_points]
# Keep only the one you need, remove the rest
console_scripts =
    iceflix = iceflix.cli:client
    iceflix-main = iceflix.cli:main
    iceflix-authenticator = iceflix.cli:authenticator
    iceflix-catalog = iceflix.cli:catalog
    iceflix-streamprovider = iceflix.cli:fileservice