[metadata]
name = IceFlix CLI Client
version = 1.0.0
description = CLI client to interact with IceFlix cloud services

[options]
packages = find:
install_requires =
    zeroc-ice>=3.7.0
    cmd2>=2.4.2

[options.package_data]
* = *.ice

[options.entry_points]
console_scripts =
    iceflix = iceflix.cli:client